[gd_scene load_steps=13 format=2]

[ext_resource path="res://PlayerSprites/idle.png" type="Texture" id=1]
[ext_resource path="res://Ending.gd" type="Script" id=2]
[ext_resource path="res://FontData.tres" type="Theme" id=3]
[ext_resource path="res://art/t94po33y0fn41.jpg" type="Texture" id=4]
[ext_resource path="res://art/nsfw3.png" type="Texture" id=5]
[ext_resource path="res://art/nsfw4.jpg" type="Texture" id=6]
[ext_resource path="res://art/nsfw2.png" type="Texture" id=7]
[ext_resource path="res://art/nsfw1.jpg" type="Texture" id=8]
[ext_resource path="res://sounds/1-min-chill-lofi-beat-just-chilling-prod-by-the-um.mp3" type="AudioStream" id=9]

[sub_resource type="Animation" id=3]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Fade")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "NewEnding"
length = 14.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Nsfw1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Nsfw1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Nsfw2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Nsfw2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3.5, 4, 6.4, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Nsfw3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Nsfw4:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Nsfw3:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 7, 7.7, 10, 10.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Nsfw4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 10.7, 11.4, 13.2, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.864662 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SFW:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Nsfw1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Nsfw1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Nsfw2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Nsfw2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Nsfw3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Nsfw4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Nsfw3:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Nsfw4:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Fade:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Ending" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1032.0
margin_bottom = 784.0
color = Color( 0, 0, 0, 1 )

[node name="SFW" type="Sprite" parent="."]
position = Vector2( 308, 387.375 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Idle" type="Sprite" parent="."]
position = Vector2( 248, 384 )
scale = Vector2( 0.875, 0.8125 )
texture = ExtResource( 1 )

[node name="Nsfw1" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 328, 392 )
scale = Vector2( 0.335898, 0.311905 )
texture = ExtResource( 8 )

[node name="Nsfw2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 328, 400 )
scale = Vector2( 0.53525, 0.497018 )
texture = ExtResource( 7 )

[node name="Nsfw3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 384 )
scale = Vector2( 0.386434, 0.386434 )
texture = ExtResource( 5 )

[node name="Nsfw4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 392 )
scale = Vector2( 0.565882, 0.565882 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 672.0
margin_top = 160.0
margin_right = 972.0
margin_bottom = 325.0
theme = ExtResource( 3 )
text = "Good job!

You managed to free the queen 
and now she is yours!

(or you are hers, she big)"

[node name="Button" type="Button" parent="."]
margin_left = 736.0
margin_top = 440.0
margin_right = 879.0
margin_bottom = 471.0
theme = ExtResource( 3 )
text = "NSFW Ending"

[node name="ButtonMenu" type="Button" parent="."]
margin_left = 704.0
margin_top = 496.0
margin_right = 896.0
margin_bottom = 527.0
theme = ExtResource( 3 )
text = "Back to main menu"

[node name="ButtonExit" type="Button" parent="."]
margin_left = 768.0
margin_top = 560.0
margin_right = 832.0
margin_bottom = 591.0
theme = ExtResource( 3 )
text = "Quit"

[node name="EndingPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/FadeIn = SubResource( 3 )
anims/NewEnding = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1032.0
margin_bottom = 784.0
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -60.0
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonExit_pressed"]
